# brave-core

./: BUILD.gn  package-lock.json
android/: brave_java_resources.gni  brave_java_sources.gni
android/java/: AndroidManifest.xml
app/: brave_main_delegate.cc  generated_resources.grd  os_settings_strings.grdp  settings_strings.grdp
browser/: brave_browser_process.h  brave_browser_process_impl.cc  brave_browser_process_impl.h  brave_content_browser_client.cc  brave_profile_prefs.cc  browser_context_keyed_service_factories.cc  sources.gni
browser/brave_ads/: BUILD.gn  brave_ads_driver.cc  brave_ads_driver.h
browser/brave_wallet/: eth_tx_controller_factory.cc  (+2 more)
common/: BUILD.gn  webui_url_constants.cc  webui_url_constants.h
components/brave_vpn/resources/panel/: BUILD.gn  vpn_panel.html  vpn_panel.tsx
components/brave_vpn/resources/panel/components/main/: index.tsx  style.ts
components/brave_vpn/resources/panel/components/status-indicator/: index.tsx  style.ts
components/brave_vpn/resources/panel/components/toggle/: index.tsx  style.ts
components/brave_vpn/resources/panel/stories/: component-panel.tsx
ios/: BUILD.gn
patches/: chrome-VERSION.patch  chrome-browser-about_flags.cc.patch  chrome-browser-ui-android-toolbar-java-src-org-chromium-chrome-browser-toolbar-top-ToolbarPhone.java.patch  chrome-common-BUILD.gn.patch  components-content_settings-renderer-content_settings_agent_impl.cc.patch  components-sync-driver-sync_service_impl.h.patch  content-public-browser-web_contents_receiver_set.h.patch
renderer/: BUILD.gn  sources.gni
test/: BUILD.gn
(+137 files in other folders)
