# Copyright (c) 2021 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# you can obtain one at http://mozilla.org/MPL/2.0/.

import("//brave/components/common/typescript.gni")
# import("//third_party/closure_compiler/compile_js.gni")
import("//mojo/public/tools/bindings/mojom.gni")
# import("//tools/grit/preprocess_if_expr.gni")

# preprocess_folder = "preprocessed"
# preprocess_panel_manifest = "preprocessed_panel_manifest.json"

transpile_web_ui("brave_vpn_panel_ui") {
  entry_points = [ [
        "brave_vpn_panel",
        rebase_path("vpn_panel.tsx"),
      ] ]
  resource_name = "brave_vpn_panel"
}

pack_web_resources("brave_vpn_panel_generated") {
  resource_name = "brave_vpn_panel"
  output_dir = "$root_gen_dir/brave/components/brave_vpn/resources/panel"
  deps = [ ":brave_vpn_panel_ui" ]
}

# js_library("brave_theme") {
#   deps = [
#     "//ui/webui/resources/js:cr.m",
#   ]
# }

# preprocess_if_expr("preprocess_panel") {
#   in_folder = "./"
#   out_folder = "$target_gen_dir/$preprocess_folder"
#   out_manifest = "$target_gen_dir/$preprocess_panel_manifest"
#   in_files = [ "wallet_panel_api_proxy.js" ]
# }

